--- a/PRICER/mainwindow.ui
+++ b/PRICER/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>935</width>
-    <height>782</height>
+    <width>1020</width>
+    <height>785</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -36,7 +36,7 @@
    </property>
    <layout class="QGridLayout" name="gridLayout_4">
     <item row="0" column="0">
-     <widget class="QTabWidget" name="Res">
+     <widget class="QTabWidget" name="Graphes">
       <property name="enabled">
        <bool>true</bool>
       </property>
@@ -65,7 +65,7 @@
        </size>
       </property>
       <property name="currentIndex">
-       <number>6</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="tab_2">
        <attribute name="title">
@@ -119,7 +119,7 @@
                     <string/>
                    </property>
                    <property name="text">
-                    <string/>
+                    <string>55</string>
                    </property>
                   </widget>
                  </item>
@@ -132,7 +132,7 @@
                     </size>
                    </property>
                    <property name="text">
-                    <string/>
+                    <string>50</string>
                    </property>
                   </widget>
                  </item>
@@ -158,7 +158,7 @@
                     </size>
                    </property>
                    <property name="text">
-                    <string>0.35</string>
+                    <string>0.2</string>
                    </property>
                   </widget>
                  </item>
@@ -171,7 +171,7 @@
                     </size>
                    </property>
                    <property name="text">
-                    <string>0.015</string>
+                    <string>0.09</string>
                    </property>
                   </widget>
                  </item>
@@ -416,7 +416,7 @@
                     <item>
                      <widget class="QLineEdit" name="eNumberOfPaths">
                       <property name="text">
-                       <string>1000000</string>
+                       <string>100000</string>
                       </property>
                      </widget>
                     </item>
@@ -1624,26 +1624,88 @@
         </item>
        </layout>
       </widget>
+      <widget class="QWidget" name="tab_8">
+       <attribute name="title">
+        <string>Variation des paramètres</string>
+       </attribute>
+       <layout class="QVBoxLayout" name="verticalLayout_21">
+        <item>
+         <widget class="QWidget" name="widget_19" native="true">
+          <layout class="QHBoxLayout" name="horizontalLayout_9">
+           <item>
+            <widget class="QRadioButton" name="VarT">
+             <property name="text">
+              <string>Par rapport à la maturité</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QRadioButton" name="VarVol">
+             <property name="text">
+              <string>Par rapport à la volatilité</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QRadioButton" name="Varr">
+             <property name="text">
+              <string>Par rapport au taux sans risque (r)</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </widget>
+        </item>
+        <item>
+         <widget class="QCustomPlot" name="VarPar" native="true">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>300</width>
+            <height>250</height>
+           </size>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_36">
+          <property name="font">
+           <font>
+            <pointsize>9</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>*Les pentes de ces courbes en la valeur entrée par l'utilisateur correspondent respectivement à Theta, Véga, Rho.</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="OKVarP">
+          <property name="text">
+           <string>Afficher</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
       <widget class="QWidget" name="tab_5">
        <attribute name="title">
         <string>Simulations de cours</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout">
-        <item row="8" column="0">
-         <widget class="Line" name="line">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-         </widget>
-        </item>
-        <item row="10" column="0">
+        <item row="11" column="0">
          <widget class="QLabel" name="label_2">
           <property name="text">
            <string>- Simulation du cours du sous-jacent dans le cadre du modèle de Levy (processus à sauts)</string>
           </property>
          </widget>
         </item>
-        <item row="12" column="0">
+        <item row="13" column="0">
          <widget class="QCustomPlot" name="Plot_SimuL" native="true">
           <property name="enabled">
            <bool>true</bool>
@@ -1668,7 +1730,7 @@
           </property>
          </widget>
         </item>
-        <item row="14" column="0">
+        <item row="15" column="0">
          <spacer name="horizontalSpacer">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
@@ -1681,14 +1743,14 @@
           </property>
          </spacer>
         </item>
-        <item row="4" column="0">
+        <item row="5" column="0">
          <widget class="QLabel" name="label">
           <property name="text">
            <string>- Simulation du cours du sous-jacent dans le cadre du modèle de Black-Scholes-Merton (mouvent brownien géométrique)</string>
           </property>
          </widget>
         </item>
-        <item row="6" column="0">
+        <item row="7" column="0">
          <widget class="QCustomPlot" name="Plot_SimuB" native="true">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -1704,25 +1766,70 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="0">
+        <item row="2" column="0">
          <widget class="Line" name="line_2">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
          </widget>
         </item>
-        <item row="0" column="0">
-         <widget class="QPushButton" name="PB">
-          <property name="text">
-           <string>Ajouter une autre simulation de cours (mouvement brownien géométrique)</string>
+        <item row="9" column="0">
+         <widget class="Line" name="line">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
           </property>
          </widget>
         </item>
-        <item row="7" column="0">
-         <widget class="QPushButton" name="PL">
-          <property name="text">
-           <string>Ajouter une autre simulation de cours (modèle de Levy)</string>
-          </property>
+        <item row="8" column="0">
+         <widget class="QWidget" name="widget_18" native="true">
+          <layout class="QHBoxLayout" name="horizontalLayout_8">
+           <item>
+            <widget class="QPushButton" name="PL">
+             <property name="text">
+              <string>Ajouter une autre simulation de cours (modèle de Levy)</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="NetSimuL">
+             <property name="maximumSize">
+              <size>
+               <width>200</width>
+               <height>16777215</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>Revenir à une simulation</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QWidget" name="widget_17" native="true">
+          <layout class="QHBoxLayout" name="horizontalLayout_6">
+           <item>
+            <widget class="QPushButton" name="PB">
+             <property name="text">
+              <string>Ajouter une autre simulation de cours (mouvement brownien géométrique)</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="NetSimuB">
+             <property name="maximumSize">
+              <size>
+               <width>200</width>
+               <height>16777215</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>Revenir à une simulation</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
          </widget>
         </item>
        </layout>
@@ -1732,6 +1839,43 @@
         <string>Graphes Pay-Off</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_3">
+        <item row="5" column="0">
+         <widget class="QCustomPlot" name="Plot_PayOffL" native="true">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>300</width>
+            <height>250</height>
+           </size>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="0">
+         <widget class="QLabel" name="label_4">
+          <property name="text">
+           <string>- Pay-Off selon le Spot Price dans le cadre du modèle de Levy (processus à sauts)</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <widget class="Line" name="line_4">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="0">
+         <widget class="Line" name="line_3">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+         </widget>
+        </item>
         <item row="1" column="0">
          <widget class="QLabel" name="label_3">
           <property name="text">
@@ -1755,40 +1899,22 @@
           </property>
          </widget>
         </item>
-        <item row="3" column="0">
-         <widget class="Line" name="line_3">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="0">
-         <widget class="Line" name="line_4">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-         </widget>
-        </item>
-        <item row="5" column="0">
-         <widget class="QCustomPlot" name="Plot_PayOffL" native="true">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="minimumSize">
-           <size>
-            <width>300</width>
-            <height>250</height>
-           </size>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="0">
-         <widget class="QLabel" name="label_4">
+        <item row="7" column="0">
+         <widget class="QPushButton" name="OKPO">
           <property name="text">
-           <string>- Pay-Off selon le Spot Price dans le cadre du modèle de Levy (processus à sauts)</string>
+           <string>Afficher</string>
+          </property>
+         </widget>
+        </item>
+        <item row="6" column="0">
+         <widget class="QLabel" name="label_37">
+          <property name="font">
+           <font>
+            <pointsize>9</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>*Les pentes de ces courbes en le Spot entée par l'utilisateur correspond au Delta.</string>
           </property>
          </widget>
         </item>
